--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
     </head>
     
     
-    <body>
+    <body class="bg-base">
         <header>
             {{- partial "header.html" . -}}
         </header>
