--- a/assets/scss/_example.scss
+++ b/assets/scss/_example.scss
@@ -3,8 +3,18 @@
 }
 
 
+
 h2 {
     font-size: 2rem;
+}
+
+//nav bar
+.nav-logo {
+    width: 5rem;
+    border-radius: 1rem;
+}
+.nav-link{
+    font-size: 1.6rem;
 }
 
 
@@ -20,4 +30,39 @@ h2 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+}
+
+
+// form changes
+
+.form-control{
+    border-color: #000;
+}
+
+.form-control:focus {
+    color: #212529;
+    background-color: #fff;
+    border-color: #000;
+    box-shadow: 0 0 0 0.25rem #444444;
+}
+
+#inputMessage{
+    height: 10rem;
+}
+
+.btn-outline-secondary {
+    --bs-btn-color: #000000;
+    --bs-btn-border-color: #000000;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #000000;
+    --bs-btn-hover-border-color: #000000;
+    --bs-btn-focus-shadow-rgb: 108,117,125;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #000000;
+    --bs-btn-active-border-color: #000000;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #000000;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: #000000;
+    --bs-gradient: none;
 }
