--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col bg-dark text-white p-3">
+        <div class="col bg-dark text-white p-3 text-center">
            Copyright &copy; <span id="js-year"><noscript>{{ now.Format "2006" }}</noscript></span> {{ with .Site.Copyright }}{{ . }}{{ else }}{{ .Site.Title }}{{ end }}
         </div>
     </div>
