Six Sided Heroes test deploy
Six Sided Heroes test deploy

--- a/assets/scss/_example.scss
+++ b/assets/scss/_example.scss
@@ -50,6 +50,10 @@ h2 {
     height: 10rem;
 }
 
+.hidden{
+    display: none;
+}
+
 .btn-outline-secondary {
     --bs-btn-color: #000000;
     --bs-btn-border-color: #000000;
