--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,8 +12,9 @@
                 <div class="d-grid gap-2 d-md-flex">
                     {{ with .Params.btn2 }}
                     {{ if and .text .url }}
-                    <button type="button" href="{{ .btn2.url }}" class="btn btn-lg btn-outline-secondary px-4">
-                        {{ .text }}</button>
+                    
+                    <a  href="{{ .url }}" class="btn btn-lg btn-outline-secondary px-4">
+                        {{ .text }}</a>
                     {{ end }}
                     {{ end }}
                 </div>
