--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-base">
     <div class="container-fluid">
-      <a href="#"><img class="nav-logo" src="/images/Six-Sided-Heroes-Logo.png" alt="Six Sided Heroes Logo"></a>
+      <a href="/"><img class="nav-logo" src="/images/Six-Sided-Heroes-Logo.png" alt="Six Sided Heroes Logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
