Update to Images
Update to Images to be faster loading.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
     <div class="container-fluid col-xxl-10">
         <div class="row align-items-center justify-content-center py-3">
             <div class="col-10 col-sm-8 col-lg-5 py-3">
-                <img src="images/Screenshot_20220210-190059.png" alt="Test Image" class="img-fluid d-block mx-auto">
+                <img src="images/HeaderImage.jpg" alt="Epic Dice Battles Header Image" class="img-fluid d-block mx-auto">
             </div>
             <div class="col-lg-5 col-sm-10 order-lg-first">
                 <h1>{{ .Params.heading }}</h1>
