Update to images again, further optimization
Update to images again, further optimization

--- a/assets/scss/_example.scss
+++ b/assets/scss/_example.scss
@@ -70,3 +70,9 @@ h2 {
     --bs-btn-disabled-border-color: #000000;
     --bs-gradient: none;
 }
+
+
+// G-Recaptcha padding bottom.
+.g-recaptcha {
+    margin-bottom: 1.5rem;
+}
