--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col bg-dark text-white p-3 text-center">
-           Copyright &copy; <span id="js-year"><noscript>{{ now.Format "2006" }}</noscript></span> {{ with .Site.Copyright }}{{ . }}{{ else }}{{ .Site.Title }}{{ end }}
+           Copyright &copy; <span id="js-year"><noscript>{{ now.Format "2006" }} </noscript></span> {{ with .Site.Copyright }}<a href="https://digitalhammock.com/">{{ . }}</a>{{ else }} {{ .Site.Title }}{{ end }}
         </div>
     </div>
 </div>
