--- a/layouts/partials/built_with.html
+++ b/layouts/partials/built_with.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row align-items-center justify-content-center py-3">
         <div class="col-10 col-sm-8 col-lg-5">
-            <img src="/images/visual_scripting.webp" alt="Test Image" class="img-fluid d-block mx-auto">
+            <img src="/images/visual_scripting.webp" alt="Visual Scription Example" class="img-fluid d-block mx-auto">
         </div>
         <div class="col-lg-5 col-sm-10 order-lg-first pt-3 pb-6">
             <h2>Built with Visual Scripting</h2>
