--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,13 +16,13 @@
 
 {{/*  links for favicon  */}}
 
-<link rel="apple-touch-icon" sizes="180x180" href="/images/six_sided_heroes_favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/six_sided_heroes_favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/six_sided_heroes_favicon/favicon-16x16.png">
-<link rel="manifest" href="/images/six_sided_heroes_favicon/site.webmanifest">
-<link rel="mask-icon" href="/images/six_sided_heroes_favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ "/images/six_sided_heroes_favicon/apple-touch-icon.png" | absURL }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ "/images/six_sided_heroes_favicon/favicon-32x32.png" | absURL }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ "/images/six_sided_heroes_favicon/favicon-16x16.png" | absURL }}">
+<link rel="manifest" href="{{ "/images/six_sided_heroes_favicon/site.webmanifest" | absURL }}">
+<link rel="mask-icon" href="{{ "/images/six_sided_heroes_favicon/safari-pinned-tab.svg" | absURL }}" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#00a300">
 <meta name="theme-color" content="#ffffff">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-<link rel="stylesheet" href="{{ $style.RelPermalink }}">
+<link rel="stylesheet" href="{{ $style.Permalink }}">
