--- a/layouts/partials/contact_form.html
+++ b/layouts/partials/contact_form.html
@@ -40,7 +40,7 @@
     </div>
 </div>
 
-<script src="{{ "/js/contact.js" | absURL }}"></script>
+<script src="{{ "/js/contact.js" | relURL }}"></script>
 
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
