--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,8 @@
 <section class="hero">
     <div class="container-fluid col-xxl-10 pb-5">
         <div class="row align-items-center justify-content-center py-3">
-            <div class="col-10 col-sm-8 col-lg-5 py-3">
-                <img src="images/HeaderImage.WebP" alt="Epic Dice Battles Header Image"
+                <div class="col-10 col-sm-8 col-lg-5 py-3">
+                	<img src="{{ "/images/HeaderImage.WebP" | relURL }}" alt="Epic Dice Battles Header Image"
                     class="img-fluid d-block mx-auto">
             </div>
             <div class="col-lg-5 col-sm-10 order-lg-first">
@@ -23,7 +23,7 @@
                     <a
                         href='https://play.google.com/store/apps/details?id=com.DigitalHammockGames.SixSidedHeroes&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
                             class="playStoreImage" alt='Get it on Google Play'
-                            src='/images/google-play-badge.png' /></a>
+                            src='{{ "/images/google-play-badge.png" | relURL }}' /></a>
                             <p class="smallPrint">Google Play and the Google Play logo are trademarks of Google LLC.</p>
                     
                 </div>
@@ -45,7 +45,7 @@
             {{ range .Params.cards }}
             <div class="col-md-4">
                 <div class="card mb-3 card-container">
-                    <img src="{{ .img }}" class="card-img-top img-fluid" alt="{{ .title }}">
+                    <img src="{{ .img | relURL }}" class="card-img-top img-fluid" alt="{{ .title }}">
                     <div class="card-body">
                         <h5 class="card-title">{{ .title }}</h5>
                         <p class="card-text">{{ .text }}</p>
