--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
     <div class="container-fluid col-xxl-10 pb-5">
         <div class="row align-items-center justify-content-center py-3">
                 <div class="col-10 col-sm-8 col-lg-5 py-3">
-                	<img src="{{ "/images/HeaderImage.WebP" | relURL }}" alt="Epic Dice Battles Header Image"
+                	<img src="{{ "images/HeaderImage.WebP" | relURL }}" alt="Epic Dice Battles Header Image"
                     class="img-fluid d-block mx-auto">
             </div>
             <div class="col-lg-5 col-sm-10 order-lg-first">
